# parser-benchmarks

./: Cargo.toml  README.md
src/: apache2.rs  main.rs  opnsense.rs  paloalto.rs  sonicwall.rs  squid.rs  windns.rs
