[package]
name = "usiem-parse-benchmark"
version = "0.0.6"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "Benchmark of uSIEM parsers"
repository = "https://github.com/u-siem/u-siem-core"
keywords = ["SIEM", "security", "logs","benchmark","firewall"]
categories = ["security"]
edition = "2018"

[dependencies]
u-siem = {version = "0.0"}
u-siem-opnsense = "0.0"
u-siem-sonicwall = "0.0"
u-siem-paloalto = "0.0"
u-siem-windns = "0.0"
u-siem-squid = "0.0"